fixed logo alignment

--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,8 @@ nav h5 a, nav h5 a:hover {
 
 .img-responsive2 {
     margin-top: 5%;
-    margin-left: 20%;
-    padding-top: 10px;
+    /*margin-left: 20%;*/
+    /*padding-top: 10px;*/
     padding-bottom: 10px;
     height: 65px;
     width: auto
